# pretty.rs

./: .clog.toml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
benches/: trees.rs
doc/: search-index.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
doc/implementors/core/fmt/: trait.Debug.js
doc/pretty/: index.html  sidebar-items.js  stability.html  stability.json  struct.Doc.html
doc/src/pretty/: doc.rs.html  lib.rs.html
doc/src/pretty/src/pretty/: doc.rs.html  lib.rs.html
examples/: colored.rs  trees.rs
src/: block.rs  doc.rs  lib.rs  main.rs  render.rs
src/doc/: doc.rs  mod.rs
src/pretty/: doc.rs  lib.rs  mod.rs  mode.rs  string_utils.rs
src/pretty/util/: string.rs  vec.rs
