[package]
name = "pretty"
version = "0.5.1"
authors = [ "Jonathan Sterling <jon@jonmsterling.com>", "Darin Morrison <darinmorrison+git@gmail.com>", "Markus Westerlind <marwes91@gmail.com>"]
description = "Wadler-style pretty-printing combinators in Rust"
documentation = "https://docs.rs/pretty/"
keywords = ["console", "functional", "pretty-printing"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Marwes/pretty.rs"

[dependencies]
typed-arena = "1.2.0"
termcolor = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "2.1.4"

[[example]]
name = "trees"

[[example]]
name = "colored"
required-features = ["termcolor"]

[package.metadata.docs.rs]
features = ["termcolor"]
