[package]
name = "pretty"
version = "0.11.3"
authors = [ "Jonathan Sterling <jon@jonmsterling.com>", "Darin Morrison <darinmorrison+git@gmail.com>", "Markus Westerlind <marwes91@gmail.com>"]
description = "Wadler-style pretty-printing combinators in Rust"
documentation = "https://docs.rs/pretty/"
keywords = ["console", "functional", "pretty-printing"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Marwes/pretty.rs"
edition = "2018"

[package.metadata.docs.rs]
features = ["termcolor"]

[dependencies]
arrayvec = "0.5"
typed-arena = "2.0.0"
termcolor = { version = "1.1.0", optional = true }
unicode-segmentation = "1"

[dev-dependencies]
criterion = "0.3"
difference = "2"
env_logger = "0.9"
tempfile = "3.1.0"

[[example]]
name = "trees"

[[example]]
name = "colored"
required-features = ["termcolor"]

[[bench]]
name = "trees"
harness = false
