[package]
name = "pretty"
version = "0.12.4"
authors = [ "Jonathan Sterling <jon@jonmsterling.com>", "Darin Morrison <darinmorrison+git@gmail.com>", "Markus Westerlind <marwes91@gmail.com>"]
description = "Wadler-style pretty-printing combinators in Rust"
documentation = "https://docs.rs/pretty/"
keywords = ["console", "functional", "pretty-printing"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Marwes/pretty.rs"
edition = "2018"

[package.metadata.docs.rs]
features = ["termcolor"]

[dependencies]
# The newer versions of arrayvec are larger due to forced u32 lengths, would need to drop down Smalltext to 16 bytes
# to not see any size increase so I'd rather stick with the older version for now
arrayvec = "0.5"
typed-arena = "2.0.0"
termcolor = { version = "1.1.0", optional = true }
unicode-width = "0.2"

[dev-dependencies]
criterion = "0.4"
difference = "2"
expect-test = "1"
tempfile = "3.1.0"

[[example]]
name = "trees"

[[example]]
name = "colored"
required-features = ["termcolor"]

[[bench]]
name = "trees"
harness = false
